[package]
name = "hematite"
version = "0.1.0"
authors = ["decency131", "ArZarLordOfMango"]
edition = '2021'
description = "2D game engine written in rust."
readme = "README.md"
repository = "https://github.com/decency131/hematite"
license-file = "LICENSE"
keywords = ["gamedev", "engine"]

[lib]
name = "hematite"
path = "src/lib.rs"

[workspace]
members = [
    "crates/*"
, "docs"]

[dependencies]
hematite_ecs = {path = "crates/hematite_ecs"}
