[package]
name = "wuestite"
version = "0.1.0"
authors = ["decency131", "ArZarLordOfMango"]
edition = '2021'
description = "2D game engine written in rust."
readme = "README.md"
repository = "https://github.com/decency131/hematite"
license-file = "LICENSE"
keywords = ["gamedev", "engine"]

[lib]
name = "wuestite"
path = "src/lib.rs"

[workspace]
members = [
    "crates/*"
, "docs"]

[dependencies]
wuestite_ecs = {path = "crates/wuestite_ecs", version = "0.1.0"}
