[package]
name = "wuestite_ecs"
version = "0.1.0"
edition = "2021"
description = "2D game engine written in rust."
readme = "README.md"
license-file = "LICENSE"
homepage = "https://github.com/decency131/wuestite/blob/main/README.md"
repository = "https://github.com/decency131/wuestite"

[dependencies]
wuestite_ecs_macros = { path = "./macros" version="*"}
